--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.2.2",
+    "react-select-country-list": "^2.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
