--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^16.8.4",
+    "react-password-strength-bar": "^0.4.0",
+    "react-phone-number-input": "^3.1.46",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
