--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "react": "^16.8.4",
     "react-datepicker": "^4.6.0",
     "react-dom": "^16.8.4",
@@ -12,7 +14,8 @@
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
